--- a/src/css/media.scss
+++ b/src/css/media.scss
@@ -133,12 +133,8 @@
         width: 90%;
     }
 
-    .footer__social-link-1,
-    .footer__social-link-2,
-    .footer__social-link-3,
-    .footer__social-link-4,
-    .footer__social-link-5 {
-        padding: 0 3px;
+    .footer__social-link {
+        margin: 0 3px;
     }
 }
 
